--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
